chore: add netlify.toml, favicon, SEO meta, robots.txt, sitemap.xml

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reelsify Media — KL Event Filming</title>
+    <meta name="description" content="Event videography in Kuala Lumpur. We turn events into shareable stories with highlight films and short-form reels. 72h delivery, scalable crew, transparent packages." />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="canonical" href="https://reelsify.co/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://reelsify.co/" />
+    <meta property="og:title" content="Reelsify Media — KL Event Filming" />
+    <meta property="og:description" content="Event videography in Kuala Lumpur. We turn events into shareable stories with highlight films and short-form reels." />
+    <meta property="og:image" content="https://reelsifymedia.com/og.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Reelsify Media — KL Event Filming" />
+    <meta name="twitter:description" content="Event videography in Kuala Lumpur. We turn events into shareable stories with highlight films and short-form reels." />
+    <meta name="twitter:image" content="https://reelsifymedia.com/og.jpg" />
   </head>
   <body>
     <div id="root"></div>
